turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:12: error: Unmatched closing brace '}' ignored here
}
^CircleYing:15: error: eof expected but '}' found.
}
^